<resources>
    <string name="app_name">Stately</string>
    <string name="app_version">Stately 1.5.5</string>
    <string name="app_header">Stately/1.5.5 (User %1$s; Droid/Fire)</string>
    <string name="app_header_nouser">Stately/1.5.5 (No User; Droid/Fire)</string>
    <string name="for_nationstates">for NationStates</string>
    <string name="username_hint">Nation Name</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="log_in_load">Logging In…</string>
    <string name="login_error_autologin">Try logging in again.</string>
    <string name="login_error_404">Invalid nation name or password.</string>
    <string name="login_error_parsing">Couldn\'t process data from NationStates.</string>
    <string name="login_error_no_internet">Couldn\'t connect to NationStates.</string>
    <string name="login_error_generic">An error occurred. Please try again.</string>
    <string name="rate_limit_error">Too fast! Try again in a bit.</string>
    <string name="multiple_request_error">An action is already in progress.</string>
    <string name="register_personal">Personal</string>
    <string name="register_economic">Economic</string>
    <string name="register_political">Political</string>
    <string name="register_strongly_disagree">Strongly Disagree</string>
    <string name="register_disagree">Disagree</string>
    <string name="register_agree">Agree</string>
    <string name="register_strongly_agree">Strongly Agree</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_nation">Nation</string>
    <string name="menu_issues">Issues</string>
    <string name="menu_telegrams">Telegrams</string>
    <string name="menu_activityfeed">Activity Feed</string>
    <string name="menu_region">Region</string>
    <string name="menu_wa">World Assembly</string>
    <string name="menu_explore">Explore</string>
    <string name="menu_switch">Switch</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_unread_count_over100">100+</string>
    <string name="time_moments_template">%1$s %2$s</string>
    <string name="time_generic_template">%1$d %2$s %3$s</string>
    <string name="time_moments">moments</string>
    <string name="time_minute">minute</string>
    <string name="time_hour">hour</string>
    <string name="time_day">day</string>
    <string name="time_ago">ago</string>
    <string name="time_from_now">from now</string>
    <string name="explore_search_text">Go to&#8230;</string>
    <string name="explore_nation">Nation</string>
    <string name="explore_region">Region</string>
    <string name="explore_positive">Let\'s Go</string>
    <string name="explore_negative">Cancel</string>
    <string name="explore_default">Exploring&#8230;</string>
    <string name="explore_error_404_nation">Nation not found.</string>
    <string name="explore_endorse">Endorse</string>
    <string name="explore_withdraw_endorse">Withdraw Endorsement</string>
    <string name="explore_endorsed_response">Endorsed %1$s.</string>
    <string name="explore_withdraw_endorse_response">Withdrew endorsement for %1$s.</string>
    <string name="explore_region_move">Move to %1$s?</string>
    <string name="explore_region_password">Password required to move</string>
    <string name="explore_move_confirm">Move</string>
    <string name="explore_move_wrong_password">Incorrect password.</string>
    <string name="switch_single_warn">No other nations are saved in Stately. Would you like to log in to a different nation?</string>
    <string name="add_nation">Add Nation</string>
    <string name="logout_confirm">Log out?</string>
    <string name="setting_exitconfirm">Confirm exit</string>
    <string name="exit_confirm">Exit Stately?</string>
    <string name="exit">Exit</string>
    <string name="nation_wa_member">WA Member</string>
    <string name="nation_wa_delegate">WA Delegate</string>
    <string name="nation_time_founded">Established %1$s\nLast seen %2$s</string>
    <string name="nation_time_immemorial">since time immemorial</string>
    <string name="nation_power_template">%1$s (%2$s)</string>
    <string name="overview_label_civrights">Civil Rights</string>
    <string name="overview_label_economy">Economy</string>
    <string name="overview_label_polifree">Political Freedom</string>
    <string name="card_overview_gov_title">Government</string>
    <string name="card_overview_gov_leader">Leader</string>
    <string name="card_overview_gov_capital">Capital</string>
    <string name="card_overview_gov_priority">Priority</string>
    <string name="card_overview_gov_tax">Income Tax</string>
    <string name="card_overview_econ_title">Economy</string>
    <string name="card_overview_econ_currency">Currency</string>
    <string name="card_overview_econ_gdp">Gross Domestic Product (GDP)</string>
    <string name="card_overview_econ_industry">Major Industry</string>
    <string name="card_overview_econ_income">Average Income</string>
    <string name="card_overview_wa_endorsements">Endorsements</string>
    <string name="card_overview_wa_novote">%1$s: No vote on the resolution.</string>
    <string name="card_overview_wa_vote">%1$s: Voted %2$s the resolution.</string>
    <string name="wa_vote_state_undecided">UNDECIDED</string>
    <string name="wa_vote_state_for">FOR</string>
    <string name="wa_vote_state_against">AGAINST</string>
    <string name="card_overview_other_title">Other Information</string>
    <string name="card_overview_other_demonym">Demonym</string>
    <string name="card_overview_other_demonym_txt1">%1$s (noun, plural %2$s), %3$s (adjective)</string>
    <string name="card_overview_other_demonym_txt2">%1$s (noun/adjective, plural %2$s)</string>
    <string name="card_overview_other_religion">Religion</string>
    <string name="card_overview_other_animal">National Animal</string>
    <string name="card_overview_other_animal_template">%1$s — %2$s.</string>
    <string name="card_overview_other_census_title">Today\'s Census: %1$s</string>
    <string name="card_overview_other_census_content">%1$s — %2$s</string>
    <string name="card_overview_other_census_region">#%1$s in %2$s (top %3$s%%)</string>
    <string name="card_overview_other_census_world">#%1$s in the world (top %2$s%%)</string>
    <string name="card_overview_census_button">Trends for %1$s</string>
    <string name="card_main_title_summary">Summary</string>
    <string name="chart_inner_text">%1$s\n%2$.1f%%</string>
    <string name="card_people_summarydesc_flavour">The %1$s of %2$s is notable for its %3$s, as well as its %4$s population of %5$s %6$s.</string>
    <string name="card_people_mortality_title">Mortality</string>
    <string name="animal_attack_original">Animal Attack</string>
    <string name="animal_attack_madlibs">%1$s Attack</string>
    <string name="card_government_expenditures_title">Expenditures</string>
    <string name="card_government_expenditures_budget">Total</string>
    <string name="card_government_expenditures_budget_flavour">%1$s (%2$.1f%% of GDP)</string>
    <string name="administration">Administration</string>
    <string name="defense">Defense</string>
    <string name="education">Education</string>
    <string name="environment">Environment</string>
    <string name="healthcare">Healthcare</string>
    <string name="industry">Industry</string>
    <string name="international_aid">International Aid</string>
    <string name="law_and_order">Law and Order</string>
    <string name="public_transport">Public Transport</string>
    <string name="social_policy">Social Policy</string>
    <string name="spirituality">Spirituality</string>
    <string name="welfare">Welfare</string>
    <string name="card_economy_analysis_title">Analysis</string>
    <string name="card_economy_analysis_gdp">Gross Domestic Product (GDP)</string>
    <string name="card_economy_analysis_per_capita">GDP Per Capita</string>
    <string name="avg_val_currency">Average: %1$s</string>
    <string name="poor_val_currency">Poorest 10%%: %1$s</string>
    <string name="rich_val_currency">Richest 10%%: %1$s</string>
    <string name="government">Government</string>
    <string name="state_owned">State-Owned</string>
    <string name="private_sector">Private</string>
    <string name="black_market">Black Market</string>
    <string name="million">million</string>
    <string name="billion">billion</string>
    <string name="trillion">trillion</string>
    <string name="val_currency">%1$s %2$s</string>
    <string name="percent">%1$.1f%%</string>
    <string name="val_suffix_currency">%1$s %2$s %3$s</string>
    <string name="activityfeed_subscriptions">Subscriptions</string>
    <string name="subscriptions_curnation">Current nation</string>
    <string name="subscriptions_switch">Switch nation list</string>
    <string name="subscriptions_dossier_n">Dossier: Nations</string>
    <string name="subscriptions_region">Current region</string>
    <string name="subscriptions_dossier_r">Dossier: Regions</string>
    <string name="subscriptions_wa">World Assembly</string>
    <string name="update">Update</string>
    <string name="activityfeed_dossier_n">Dossier: Nations</string>
    <string name="activityfeed_dossier_r">Dossier: Regions</string>
    <string name="dossier_n_none">There are no nations in the Dossier.</string>
    <string name="dossier_r_none">There are no regions in the Dossier.</string>
    <string name="region_404">Region not found.</string>
    <string name="region_pop">Nation</string>
    <string name="card_region_quick_facts_title">Quick Facts</string>
    <string name="card_region_wa_delegate">WA Delegate</string>
    <string name="region_delegate_votes">%1$s (%2$s %3$s)</string>
    <string name="region_filler_vote">vote</string>
    <string name="region_filler_none">None</string>
    <string name="card_region_founder">Founder</string>
    <string name="region_founded_append">(%1$s)</string>
    <string name="card_region_power">Regional Power</string>
    <string name="card_region_factbook_title">Factbook</string>
    <string name="card_region_tags_title">Tags</string>
    <string name="card_region_rmb">Regional Message Board</string>
    <string name="card_region_poll">Poll</string>
    <string name="region_option_index">Option %1$d</string>
    <string name="card_region_wa_vote">%1$s Resolution</string>
    <string name="region_wa_filler">Among this region\'s nations, voting is currently %1$d for to %2$d against.</string>
    <string name="card_region_wa_link">Open the %1$s resolution</string>
    <string name="poll_votes_template">%1$s (%2$d %3$s)</string>
    <string name="votes_null">No votes have been recorded yet!</string>
    <string name="region_rmb">RMB: %1$s</string>
    <string name="spoiler_warn">Spoiler</string>
    <string name="spoiler_warn_link">[spoiler]</string>
    <string name="spoiler_warn_title">Spoiler: %1$s</string>
    <string name="spoiler_warn_title_link">[spoiler: %1$s]</string>
    <string name="rmb_suppressed">[i]Suppressed by [nation=%1$s].[/i]\n\n[i][spoiler=Tap to view.]%2$s[/spoiler][/i]</string>
    <string name="clicky_link_http">&lt;a href=&quot;%1$s&quot;&gt;[external link: %2$s]&lt;/a&gt;</string>
    <string name="clicky_link_www">&lt;a href=&quot;http://%1$s&quot;&gt;[external link: %2$s]&lt;/a&gt;</string>
    <string name="rmb_no_content">Nothing to see here!</string>
    <string name="rmb_caught_up">All caught up!</string>
    <string name="rmb_backtrack_error">Can\'t catch up with the volume of posts.</string>
    <string name="bbcode_parse_error">A parsing error was encountered: couldn\'t load content.</string>
    <string name="rmb_message_hint">Post a message…</string>
    <string name="rmb_reply">Replying to %1$s</string>
    <string name="rmb_delete_confirm">Delete this post?</string>
</resources>