<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    card_view:cardBackgroundColor="@android:color/white"
    tools:layout_marginLeft="100dp"
    tools:layout_marginRight="100dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/card_register_ideology_title"
            android:gravity="start"
            android:textSize="16sp"
            android:padding="16dp"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="Libertarian" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">
            <TextView
                android:textSize="12sp"
                android:fontFamily="sans-serif-light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                tools:text="@string/register_personal" />
            <LinearLayout
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/card_register_personal_1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_circle_unfilled_blue"/>
                <ImageView
                    android:id="@+id/card_register_personal_2"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_circle_unfilled_blue"/>
                <ImageView
                    android:id="@+id/card_register_personal_3"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_circle_unfilled_blue"/>
                <ImageView
                    android:id="@+id/card_register_personal_4"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_circle_unfilled_blue"/>
                <ImageView
                    android:id="@+id/card_register_personal_5"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_circle_unfilled_blue"/>
                <ImageView
                    android:id="@+id/card_register_personal_6"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_circle_unfilled_blue"/>
            </LinearLayout>
            <TextView
                android:textSize="12sp"
                android:paddingTop="8dp"
                android:fontFamily="sans-serif-light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                tools:text="@string/register_economic" />
            <LinearLayout
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/card_register_economic_1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_circle_unfilled_red"/>
                <ImageView
                    android:id="@+id/card_register_economic_2"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_circle_unfilled_red"/>
                <ImageView
                    android:id="@+id/card_register_economic_3"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_circle_unfilled_red"/>
                <ImageView
                    android:id="@+id/card_register_economic_4"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_circle_unfilled_red"/>
                <ImageView
                    android:id="@+id/card_register_economic_5"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_circle_unfilled_red"/>
                <ImageView
                    android:id="@+id/card_register_economic_6"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_circle_unfilled_red"/>
            </LinearLayout>
            <TextView
                android:textSize="12sp"
                android:paddingTop="8dp"
                android:fontFamily="sans-serif-light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                tools:text="@string/register_political" />
            <LinearLayout
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/card_register_political_1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_circle_unfilled_green"/>
                <ImageView
                    android:id="@+id/card_register_political_2"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_circle_unfilled_green"/>
                <ImageView
                    android:id="@+id/card_register_political_3"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_circle_unfilled_green"/>
                <ImageView
                    android:id="@+id/card_register_political_4"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_circle_unfilled_green"/>
                <ImageView
                    android:id="@+id/card_register_political_5"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_circle_unfilled_green"/>
                <ImageView
                    android:id="@+id/card_register_political_6"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/ic_circle_unfilled_green"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>